fixed overflow issue

--- a/reactrb/src/ProjSignIn.css
+++ b/reactrb/src/ProjSignIn.css
@@ -4,7 +4,7 @@ body{
      /* background-color: #dfc42b; */
      background: linear-gradient(to bottom, #dfc42b, #fff997);
      height: 100vh;
-     overflow: hidden;
+     /* overflow: hidden; */
 }
 
 .new-exist-project{
